@@ -7,6 +7,7 @@ Permitir hotswap a Pentagon
 Mejorar aviso de Azimuth en ventana External Audio Source
 Permitir no guardar snapshot al salir de ZEsarUX
 Permitir definir Alt Izq, Ctrl Izq, Shift Izq o TAB como acción de Fuego de Joystick
+Mostrar posicion de lectura actual en Visor de Cinta de Entrada
 
 * Correcciones:
 
