@@ -24,3 +24,5 @@ Para esta version:
 
 --- Fin Documentar ---
 
+
+-cinta tap/tzx entrada , que indique donde está el puntero de lectura
