@@ -40,7 +40,7 @@
 
 
 extern void menu_file_viewer_read_file(char *title,char *file_name);
-extern void menu_tape_browser_show(char *filename);
+extern void menu_tape_browser_show(char *filename,int indice_bloque_actual);
 extern void menu_file_hexdump_browser_show(char *filename);
 extern void menu_file_mmc_browser_show_file(z80_byte *origen,char *destino,int sipuntoextension,int longitud);
 extern void menu_file_mmc_browser_show(char *filename,char *tipo_imagen);
